--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "start": "npx serve storybook-static -p 6006"
+    "build": "storybook build",
+    "start-alt": "npx serve storybook-static -p 6006",
+    "start": "pnpm storybook"
   },
   "dependencies": {
     "react": "^18.3.1",
